networkPolice/policies/allow.egress.backend.dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-dns
  namespace: gk-19-backend
spec:
  podSelector:
    matchLabels:
      app: gk-19-backend

  policyTypes:
    - Egress
  

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          
          podSelector:
            matchLabels:
              k8s-app: kube-dns

      ports:
        - protocol: TCP
          port: 53

        - protocol: UDP
          port: 53
