networkPolice/policies/allow.ingress.backend.database.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-database
  namespace: gk-19-database
spec:
  podSelector:
    matchLabels:
      app: database

  policyTypes:
    - Ingress
  

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gk-19-backend
          
          podSelector:
            matchLabels:
             app: gk-19-backend

      ports:
        - protocol: TCP
          port: 5432
