networkPolice/policies/allow.ingress.frontend.backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: gk-19-backend
spec:
  podSelector:
    matchLabels:
      app: gk-19-backend

  policyTypes:
    - Ingress
  

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              layer: frontend
          
          podSelector:
            matchLabels:
              app: frontend

      ports:
        - protocol: TCP
          port: 80
