networkPolice/policies/deny.egress.backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress-backend
  namespace: gk-19-backend
spec:
  podSelector:
    matchLabels:
      app: gk-19-backend

  policyTypes:
    - Egress
