networkPolice/policies/deny.ingress.database.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-database
  namespace: gk-19-database
spec:
  podSelector:
    matchLabels:
      app: database

  policyTypes:
    - Ingress
